# mpc

./: .changelog-skip-commits  .cliffignore  .ecrc  .editorconfig  .editorconfig-checker.json  .gitignore  .gitmodules  .semgrepignore  AGENTS.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.multichain  LICENSE  Makefile  Makefile.toml  README.md  RELEASES.md  ROADMAP.md  SCALING_AND_SECURITY.md  TEE.md  cliff.toml  clippy.toml  deny.toml  expanded.rs  flake.nix  launcher-docker-compose.yaml  launcher.md  launcher.py  libtest_as.rlib  lychee.toml  prompt.md  repro-env.toml  rust-toolchain.toml  take-unowned-race-condition.md  temp.json  test-file.md  (+2 more)
attestation/: Cargo.toml  expected_rtmrs.json  rustfmt.toml  test_quote_length.rs
attestation/assets/: tcb_info.json
attestation/src/: app_compose.rs  attestation.rs  collateral.rs  expected_rtmrs.rs  hash.rs  lib.rs  measurements.rs  quote.rs  report_data.rs  tcbinfo.rs  tee_authority.rs  test_utils.rs
attestation/tests/: app_compose.json  app_compose.rs  collateral.rs  common.rs  launcher_image_compose.yaml  tcb_info.json  test_attestation_verification.rs  test_launcher_image_compose_normalization.rs  test_verification.rs
attestation/tests/assets/: README.md  app_compose.json  collateral.json  create_assets.sh  create_assets_files.sh  launcher_image_compose.yaml  launcher_image_compose_normalized.yaml  quote.json  quote_collateral.json  tcb_info.json
benchmark/: Cargo.toml
benchmark/src/: main.rs
chain-signatures/: Cargo.toml  README.md
chain-signatures/contract/: Cargo.toml
chain-signatures/contract-eth/: hardhat.config.js  package.json
chain-signatures/contract-eth/contracts/: ChainSignatures.sol
chain-signatures/contract/.cargo/: config.toml
chain-signatures/contract/src/: config.rs  errors.rs  lib.rs  migrate.rs  primitives.rs  state.rs  update.rs
chain-signatures/contract/tests/: common.rs  lib.rs  sign.rs  tests.rs  updates.rs  user_views.rs  vote.rs
chain-signatures/crypto-shared/: Cargo.toml
chain-signatures/crypto-shared/src/: kdf.rs  types.rs
chain-signatures/keys/: Cargo.toml
chain-signatures/keys/src/: hpke.rs
chain-signatures/node/: Cargo.toml  redis.conf
chain-signatures/node/src/: cli.rs  config.rs  http_client.rs  indexer.rs  kdf.rs  lib.rs  main.rs  metrics.rs  rpc_client.rs  test_utils.rs  types.rs  util.rs
chain-signatures/res/: mpc_test_contract.wasm
chain-signatures/test-contracts/: .gitignore  Cargo.toml  build.sh
chain-signatures/test-contracts/src/: lib.rs
crates/attestation/: Cargo.toml
crates/attestation-cli/: Cargo.toml  README.md
crates/attestation-cli/src/: cli.rs  data.rs  lib.rs  main.rs  output.rs  verify.rs
crates/attestation-cli/tests/: test_verification.rs
crates/attestation-types/: Cargo.toml
crates/attestation-types/src/: collateral.rs  dstack_attestation.rs  lib.rs  quote.rs  report_data.rs  tcb_info.rs  verify_post_dcap.rs
crates/attestation/assets/: event_log.json  tcb_info.json  tcb_info_dev.json
crates/attestation/src/: app_compose.rs  attestation.rs  collateral.rs  dcap_conversions.rs  expected_measurements.rs  lib.rs  measurements.rs  quote.rs  report_data.rs  tcb_info.rs
crates/attestation/tests/: app_compose.rs  collateral.rs  test_attestation_verification.rs
crates/backup-cli/: Cargo.toml
crates/backup-cli/assets/: contract_state.json
crates/backup-cli/src/: adapters.rs  backup.rs  cli.rs  contract_state.rs  lib.rs  main.rs  ports.rs  service.rs  types.rs
crates/bounded-collections/: Cargo.toml
crates/bounded-collections/src/: bounded_vec.rs  btreeset.rs  lib.rs
crates/chain-gateway/: Cargo.toml  README.md
crates/chain-gateway-test-contract/: Cargo.toml
crates/chain-gateway-test-contract/res/: chain_gateway_test_contract.wasm
crates/chain-gateway-test-contract/src/: args.rs  consts.rs  lib.rs
crates/chain-gateway/src/: chain_gateway.rs  contract_state.rs  contract_state_stream.rs  errors.rs  event_subscriber.rs  lib.rs  logger.rs  mock.rs  near_internals.rs  near_internals_wrapper.rs  neard.rs  primitives.rs  state_viewer.rs  stats.rs  transaction_sender.rs  types.rs
crates/ckd-example-cli/: Cargo.toml  README.md
crates/ckd-example-contract/: Cargo.toml
crates/contract/: Cargo.toml  README.md  readme.md
crates/contract-analytics/: Cargo.toml
crates/contract-history/: Cargo.toml  README.md
crates/contract-interface/: Cargo.toml  README.md
crates/contract_history/: Cargo.toml  README.md
crates/crypto-types/: Cargo.toml
crates/data_transfer_objects/: Cargo.toml
crates/dcap-qvl-asn1-backend/: Cargo.toml
devnet/: .gitignore  Cargo.toml  README.md  add_nodes.sh  config.yaml.template  deploy.sh  join_vote.sh  sign_request.sh  vote_join.sh
devnet/configs/: 0.json  1.json
devnet/devnet/: deploy.sh  sign_request.sh
devnet/devnet_configs/: 0.json  1.json  2.json  3.json  nodes.tfvars.json
devnet/devnet_setup/: .gitignore  Cargo.toml
devnet/generate_keys/: Cargo.toml
devnet/src/: account.rs  cli.rs  constants.rs  contracts.rs  devnet.rs  e2e.rs  funding.rs  loadtest.rs  main.rs  mpc.rs  queries.rs  rpc.rs  terraform.rs  todo.txt  tx.rs  types.rs
load-tests/: Cargo.toml
mpc-recovery/: Cargo.toml  DEPLOY.md  README.md
mpc-recovery/src/: lib.rs  oauth.rs
node/: Cargo.toml  build.rs  presignature_network_report_best_case.json  signature_network_report_best_case.json  triple_network_report_best_case.json  triple_network_report_worst_case.json
node/src/: asset_cleanup.rs  assets.rs  async_testing.rs  build_info.rs  ckd_request.rs  cli.rs  config.rs  coordinator.rs  db.rs  epoch_data.rs  frost_sign.rs  hash.rs  hkdf.rs  indexer.rs  key_events.rs  key_generation.rs  key_resharing.rs  keyshare.rs  lib.rs  main.rs  metrics.rs  mpc_client.rs  network.rs  p2p.rs  primitives.rs  protocol.rs  protocol_version.rs  recent_blocks_tracker.rs  runtime.rs  sign.rs  sign_request.rs  storage.rs  tee.rs  testloop.rs  tests.rs  tracing.rs  tracking.rs  triple.rs  types.rs  web.rs  (+2 more)
tee_authority/: Cargo.toml
tee_authority/src/: tee_authority.rs
(+2342 files in other folders)
