[package]
name = "attestation"
version = "0.1.0"
edition = "2024"

[features]
default = []
external-services-tests = []

[dependencies]
anyhow = { workspace = true }
backon = { workspace = true }
borsh = { workspace = true }
dcap-qvl = { workspace = true }
dstack-sdk = { workspace = true }
http = { workspace = true }
mpc-primitives = { workspace = true }
near-crypto = { workspace = true }
near-sdk = { workspace = true }
derive_more = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
rand = { workspace = true }
