[package]
name = "attestation"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
dcap-qvl = { workspace = true }
derive_more = { workspace = true }
dstack-sdk-types = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true }
mpc-primitives = { workspace = true }
near-sdk = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[features]
abi = [
    "borsh/unstable__schema",
    "dcap-qvl/borsh_schema",
    "dstack-sdk-types/borsh_schema",
]
