[package]
name = "benchmark-mpc-sign"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
near-jsonrpc-client = "0.14.0"
near-jsonrpc-primitives = "0.27"
near-primitives = "0.27"
rand = "0.8.4"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1.40", features = ["std"] }
tracing-subscriber = { version = "0.3.19", features = ["std"] }

near-synth-bm = { git = "https://github.com/near/nearcore", rev = "dfeb47874788fd3c66dc57f6d2bfcb48cd7105df" }
