[package]
name = "devnet"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
borsh = { version = "1.5.7", features = ["derive"] }
clap = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
near-crypto = "0.28.0"
near-jsonrpc-client = "0.15.1"
near-jsonrpc-primitives = "0.28.0"
near-primitives = "0.28.0"
near-sdk = { workspace = true }
rand = "0.9.0"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
mpc-contract = { path = "../libs/chain-signatures/contract", features = [
    "test-utils",
] }
legacy-mpc-contract = { workspace = true }
