[package]
name = "mpc-devnet"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
attestation = { workspace = true }
borsh = { workspace = true }
clap = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
legacy-mpc-contract = { workspace = true }
mpc-contract = { workspace = true, features = ["test-utils", "dev-utils"] }
# TODO: #658 use workspace version
rand = "0.9.0"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
near-sdk = { workspace = true }

# TODO: #657 use workspace versions.
# https://github.com/near/mpc/issues/657 
near-crypto = "0.28.0"
near-jsonrpc-client = "0.15.1"
near-jsonrpc-primitives = "0.28.0"
near-primitives = "0.28.0"

