[package]
name = "load-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
goose = "^0.17"
goose-eggs = "0.5.1"
tokio = "^1.12"
reqwest = "^0.11"
jsonwebtoken = "8.3.0"
near-primitives = "0.17.0"
serde = "1.0.130"
serde_json = "1.0.68"
chrono = "0.4.19"
near-crypto = "0.17.0"
mpc-recovery = { path = "../mpc-recovery" }
rand = "0.8.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
near-jsonrpc-client = "0.6.0"
near-fetch = "0.2.0"
web3 = "0.19.0"
borsh = "0.10.3"
near-workspaces = { git = "https://github.com/near/near-workspaces-rs", branch = "feat/upgrade-near-deps" }
