[package]
name = "mpc-node"
version = "2.2.0-rc.1"
edition = "2021"
license = "MIT"

[dependencies]
actix = { workspace = true }
aes-gcm = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
backon = { workspace = true }
borsh = { workspace = true }
threshold-signatures = { workspace = true }
clap = { workspace = true }
dstack-sdk = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
gcloud-sdk = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
hkdf = { workspace = true }
http = { workspace = true }
humantime = { workspace = true }
k256 = { workspace = true }
lazy_static = { workspace = true }
lru = { workspace = true }
near-sdk = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
rand_xorshift = { workspace = true }
rcgen = { workspace = true }
rocksdb = { workspace = true }
rustls = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha3 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
x509-parser = { workspace = true }

curve25519-dalek = { workspace = true }

near-indexer = { workspace = true }
near-indexer-primitives = { workspace = true }
near-client = { workspace = true }
near-config-utils = { workspace = true }
near-crypto = { workspace = true }
near-o11y = { workspace = true }
near-time = { workspace = true }
legacy-mpc-contract = { workspace = true }
mpc-contract = { workspace = true }
deranged = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
serial_test = { workspace = true }
reqwest = { workspace = true }
itertools = { workspace = true }
mpc-contract = { workspace = true, features = ["test-utils"] }
mockall = { workspace = true }
rstest = { workspace = true }

[features]
tee = []
network-hardship-simulation = []
